Fixed Forum blocked reply alignment issue

--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -11294,6 +11294,10 @@ h2.bbp-form-title.entry-title {
   opacity: 0.7;
 }
 
+.bs-reply-header.bs-reply-suspended-header .bp-suspended-avatar {
+  min-width: 48px;
+}
+
 .bbp-reply-content.bs-forum-suspended-content {
   opacity: 0.7;
 }
